exercise1.12/Server/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      volumes:
        - name: shared-storage
          persistentVolumeClaim:
            claimName: server-claim
      containers:
        - name: server
          image: anttitmh/server
          volumeMounts: 
          - name: shared-storage
            mountPath: /usr/src/app/files
